# interval

./: CMakeLists.txt  README.md
include/: Interval.h  IntervalSet.h
tests/: CMakeLists.txt  test_Interval.cpp  test_IntervalSet.cpp
